@@ -86,6 +86,7 @@ class PluginTester:
         'PluginMovieKinoDe',
         'PluginMovieMovieMeter',
         'PluginMovieOFDb',
+        'PluginMovieScope',
         'PluginMovieZelluloid',
     ]
 
