@@ -5,6 +5,9 @@ Griffith ChangeLog
 (c) 2005-2010  Vasco Nunes, Piotr Ożarowski
 
 
+2010-01-17  Michael Jahn
+	* Scope movie plugin added
+
 2010-01-05  Michael Jahn
 	* delete button added to the advanced filter dialog
 	* updated movie plugin Cinematografo (year added to result list entries)
